renamed container as nav-bar

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <body>
     <header>
-      <div class="container">
+      <div class="nav-bar">
         <input type="checkbox" name="" id="check" />
 
         <div class="logo-container">
