Fixed the arrow for show-dropdown in desktop screen size and updated screenshot for the README.md

--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
                       <a href="#">Link 2</a>
                     </li>
                     <li class="dropdown-link">
-                      <a href="#">Link 3<i class="fas fa-caret-down"></i></a>
+                      <a href="#"
+                        >Link 3<i class="fas fa-caret-down desk-hide"></i
+                      ></a>
                       <div class="show-dropdown">
                         <ul>
                           <li class="dropdown-link">
